Update flowscale config

--- a/flowscale.yml
+++ b/flowscale.yml
@@ -156,6 +156,58 @@ workflows:
         demo_type: image
     skip_preprocess: true
     advancedConfig: false
+  - id: pg45usypow
+    name: controlnet_connection.json
+    description: ''
+    file: basics/controlnet_connection.json
+  - id: 52igjpgpgxb
+    name: controlnet_preprocessors.json
+    description: ''
+    file: basics/controlnet_preprocessors.json
+  - id: 0rsx5ohi9wmj
+    name: image_composite_masking.json
+    description: ''
+    file: basics/image_composite_masking.json
+  - id: xz3peo4l2s9
+    name: image_resizing.json
+    description: ''
+    file: basics/image_resizing.json
+  - id: z198mik3i5d
+    name: segment_anything.json
+    description: ''
+    file: basics/segment_anything.json
+  - id: sg1m87c9i
+    name: basic_inpainting.json
+    description: ''
+    file: inpainting_and_outpainting/basic_inpainting.json
+  - id: glbc60wnb5v
+    name: basic_outpainting.json
+    description: ''
+    file: inpainting_and_outpainting/basic_outpainting.json
+  - id: ttn523iclbb
+    name: fashion_photography_workflow.json
+    description: ''
+    file: inpainting_and_outpainting/fashion_photography_workflow.json
+  - id: hnq0fc1ispd
+    name: product_photography.json
+    description: ''
+    file: inpainting_and_outpainting/product_photography.json
+  - id: ixl0iz5v1e
+    name: product_photography_2.json
+    description: ''
+    file: inpainting_and_outpainting/product_photography_2.json
+  - id: e9658mzy67w
+    name: product_photography_app.json
+    description: ''
+    file: inpainting_and_outpainting/product_photography_app.json
+  - id: 2i4z5aaaxxk
+    name: product_photography_improved.json
+    description: ''
+    file: inpainting_and_outpainting/product_photography_improved.json
+  - id: 0svkp5ppdvle
+    name: basic_relighting.json
+    description: ''
+    file: relighting/basic_relighting.json
 normal_workflows:
   - id: dt1vvo7wj2u
     name: basic_inpainting.json
